Sculpt Paint - Crash when using Smear with Anchored stroke #98745

Closed
opened 2022-06-09 22:23:00 +02:00 by Sun Kim · 9 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-07 08:35, hash: dcbbdc89ea
Worked: n/a

Short description of error
Crash when trying to use Sculpt Paint Smear with anchored stroke.

Exact steps for others to reproduce the error

  • Pick Smear in Sculpt mode
  • Change stroke method to Anchored
  • Try to stroke
  • Crash
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-07 08:35, hash: `dcbbdc89ea` Worked: n/a **Short description of error** Crash when trying to use Sculpt Paint Smear with anchored stroke. **Exact steps for others to reproduce the error** - Pick Smear in Sculpt mode - Change stroke method to Anchored - Try to stroke - Crash
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2022-06-10 11:35:09 +02:00
Member

ss->cache->prev_colors is NULL in do_smear_store_prev_colors_task_cb_exec
I think something similar to 3ae664363d needs to be done here, will check.

ss->cache->prev_colors is NULL in `do_smear_store_prev_colors_task_cb_exec` I think something similar to 3ae664363d needs to be done here, will check.

This issue was referenced by 7682e0a697

This issue was referenced by 7682e0a697fd1274f78c352038315ea28e9d9e13

This issue was referenced by c55dac9904

This issue was referenced by c55dac9904d7f18189fa8335794696e49b2d3875
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Can we also push this fix for corrective release?

Can we also push this fix for corrective release?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98745
No description provided.