Fix T98745: Anchored mode not working for sculpt smear brush